--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ body {
   <div class="side">
     <h2>Sobre mim</h2>
     <h5>Minha foto:</h5>
-    <div class="fakeimg" style="height:200px;"><a href="index.html"><img src="Google.png" alt="Minha foto"></a>
+    <div class="fakeimg" style="height:200px;"><a href="index.html"><img src="/Imagens/Google.png" alt="Minha foto"></a>
     </div>
     <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
     <h3>Mais Sobre mim</h3>
